# FTC2024

./: build.common.gradle  build.dependencies.gradle  gradle.properties
FtcRobotController/: build.gradle
FtcRobotController/src/main/: AndroidManifest.xml
TeamCode/: build.gradle
TeamCode/src/main/cpp/: BoundingBox.h  CMakeLists.txt  DetectedObject.h  NcnnProcessor.cpp  NcnnProcessor.h  jni.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: AprilTagTest.java  AutoBlueBack.java  AutoBlueFront.java  AutoRedBack.java  AutoRedFront.java  Constants.java  Robot.java  TFYOLOtest.java  Teleop.java  VisionTest.java  encodertest.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/commands/: AlignWithApriltag.java  AutonomousDriveForward.java  ToTargetCommand.java  WaitForTargetCommand.java  WristToTargetCommand.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/commands/purepursuit/: Point.java  PurePursuitCommand.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/subsystems/: ArmExtendSubsystem.java  ArmRotateSubsystem.java  ArmSubsystem.java  ArmWristSubsystem.java  DriveSubsystem.java  GlobalSubsystem.java  HandSubsystem.java  OdometrySubsystem.java  PlaneSubsystem.java  VisionSubsystem.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/utils/: AbstractMotorSubsystem.java  ActionCommand.java  AnalogEncoder.java  CameraStreamProcessor.java  MotorInterface.java  ObjectProcessor.java  RevIMU.java  RobotMath.java  RotationPIDFController.java  TempProcessor.java  ThreadedVisionProcessor.java  TrackingWheelLocalizer.java
(+2 files in other folders)
